--- a/style.css
+++ b/style.css
@@ -18,11 +18,15 @@
     background-color: black;
     color: white;
     text-align: center;
+    display: flex;
 }
 
+
 .container{
-    width: 1200px;
+    width: 80%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
    
 
     
@@ -30,14 +34,24 @@
 
 .navbar{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    
     padding-top: 1 rem;
     align-items: center;
-    width: 900px;
+    width: 100%;
     margin: 0 auto;
-    margin-bottom: 5%;
+
     margin-top: 2%;
 }
+@media (max-width: 700px) {
+    .nav-items {
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+}
+
+
 .log-container{
     display: flex;
     justify-content: baseline;
@@ -45,7 +59,7 @@
 }
 .logo-text{
     margin-left: -0.7rem;
-    font-size: 35px;
+    font-size: 2rem;
     animation: tex;
     animation-duration: 8s;
     animation-iteration-count: infinite;
@@ -60,11 +74,11 @@
 
 .nav-items{
     display: flex;
-    gap: 2rem;
-    padding: 0 4rem;
+    gap: 1rem;
+    
 }
 .logo{
-    width: 70px;
+    width: 3rem;
 }
 .nav-items div a{
     color: black;
@@ -82,12 +96,11 @@ a{
 .hero{
     position: relative;
     display: flex;
-    justify-content: center;
-    align-content: center;
-    gap: 5rem;
+
+    
     height: 100%;
     
-    width: 900px;
+    width: 100%;
     margin: 0 auto;
 }
 .faded-text{
@@ -100,21 +113,25 @@ a{
     margin-left: 10%;
 }
 #bhavii{
-    height: 210px;
+    height: 12rem;
     z-index: -7;
+    width: 98%;
+   
 }
 .hero-left{
     display: flex;
     flex-direction: column;
-    width: 500vh;
+    width: 50%;
     
     justify-content: center;
     gap: 2rem;
+    
 }
 .hero-left-heading{
     font-style: 35px;
     color: #343d68;
     font-weight: 500;
+    
 
 
 }
@@ -124,8 +141,9 @@ a{
 }
 .role{
     color: #4e45d5;
-    font-weight: 800;
-    font-size: 39px;
+    font-weight: 8
+    00;
+    font-size: 38px;
 }
 .hero-left-description{
     margin-top: 1rem;
@@ -163,25 +181,93 @@ a{
 .botton:hover::before{
     transform: scaleX(1);
 }
-
 .hero-right{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    
+}
+
+.white-page{
+    width: 40%;
+    
     
     position: relative;
+
+    
 }
+@media (max-width: 600px) {
+    .hero {
+      flex-direction: column; /* Child divs are placed in a column */
+      gap: 3rem;
+    }
+    .hero-left{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 5rem;
+      
+    }
+    .hero-right{
+        width: 100%;
+       
+
+    }
+
+    .hero-left-heading{
+      text-align: center;
+        
+    
+    
+    }
+    .hero-left-subheading{
+        text-align: center;
+    }
+    .role{
+        color: #4e45d5;
+        font-weight: 8
+        00;
+        font-size: 38px;
+    }
+    .hero-left-description{
+
+        margin: 0
+        auto;
+    
+    }
+    .botton{
+   
+        margin: 0
+        auto;
+    }
+  
+    
+
+}
+
 .absolute{
     position: absolute;
 }
 .bhavi{
-    padding: 2rem;
+    padding: 0.4rem;
     filter: grayscale(1);
     transition: all 1s;
     animation: scaleImage 5s linear infinite;
     
+  
+    
+}
+#bhavii{
+    width: 92%;
+    margin: 0.5rem;
 }
 .icons-dots{
     z-index: 1;
     
-    top: 17rem;
+    top: 14rem;
     right: 0;
     animation: dotsAnimations;
     animation-duration: 3s;
@@ -194,7 +280,7 @@ a{
     z-index: 1;
     
     top:-0.8em;
-    right:1em;
+    right:-1em;
     animation: cubeRotate;
     animation-duration: 4s;
     animation-iteration-count: infinite;
