--- a/style.css
+++ b/style.css
@@ -243,6 +243,9 @@ a{
         margin: 0
         auto;
     }
+
+   
+    
   
     
 
@@ -329,104 +332,14 @@ a{
     
 }
 
-@keyframes scaleImage {
-    0%{
-        filter: grayscale(0);
-        transform: scale(1);
-        box-shadow: 3px 3px 10px black;
-    }
-    50%{
-        transform: scale(1.1);
-        filter: grayscale(0);
-        box-shadow: 3px 3px 10px black;
-    }
-    100%{
-        transform: scale(1);
-        filter: grayscale(1);
-        box-shadow: 3px 3px 5px black;
-    }
 
-    
-    
-}
-@keyframes dotsAnimations {
-    0%{
-        transform:translateY(0px);
-    }
-    50%{
-        transform: translateY(-15px);
-    }
-    100%{
-        transform: translateY(0px);
-    }
-    
-  }
-  @keyframes cubeRotate {
-    0%{
-        transform: rotateY(0deg) translateY(0px);
-    }
-    50%{
-        transform:  rotateY(180deg) translateY(-12px);
-    }
-    100%{
-        transform:  rotateY(360deg) translateY(0px);
-    }
-  }
 
-@keyframes circleShake {
-   
-    50%{
-        left: -13px;
-       top: 95%;
-    }
-   
-    
-    
-}
-
-@keyframes zigAnimations {
-    50%{
-        
-        right: 1em;
-        top: 2%;
-        transform: rotateY(-6deg);
-    }
-   
-    
-}
-
-@keyframes plusAnimations {
-    50%{
-        top:1%;
-        left:45%
-    }
-   
-    
-}
-@keyframes tex {
-    0%{
-        
-        font-size: 35px;
-        text-shadow: 5px 5px 7px  #0000003f;
-    }  
-    50%{
-        
-        font-size: 30px;
-        text-shadow: 5px 5px 7px  #0000003f;
-    }
-    100%{
-        
-        font-size: 35px;
-        text-shadow: 5px 5px 7px  #0000003f;
-    }
-   
-    
-}
 
 .projects{
     background-color: rgb(231, 231, 231);
     margin-top: -2rem;
     padding-top: 4%;
+    width: 100vw;
 
 }
 .project-heading{
@@ -442,8 +355,8 @@ a{
     margin: 0 auto;
     flex-direction: column;
     padding:  3rem;
-    width: 1200px;
-    gap: 120px;
+    width: 90%;
+    gap: 4rem;
 
     
 }
@@ -452,9 +365,12 @@ a{
     width: 90%;
     position: relative;
 
-    height: 550px;
+    height: 65vh;
 
 }
+
+
+
 #project1{
     /* background-image: url(/images/projects/Project1.png); */
     background-size: cover;
@@ -523,6 +439,7 @@ a{
     transform: scaleX(1);
 }
 
+
 .project-number{
     position: absolute;
     font-size: 200px;
@@ -567,13 +484,15 @@ a{
 }
 
 .project-skills-container{
-    width: 60%;
-    display: flex;
-    gap: 10px;
+    width: 100%;
+
+    gap: 1rem;
     flex-wrap:wrap ;
+    height: 90%;
+    display: flex;
 }
 .project-skill{
-    width: 40px;
+    width: 2.3rem;
 }
 .project-skill:hover{
     transform: scale(1.2);
@@ -582,11 +501,12 @@ a{
 
 .project-heading{
     display: flex;
-    font-size: 50px;
+    font-size: 2rem;
     font-weight: bold;
   
     color: white;
-    left: 0;
+    margin-bottom: 10%;
+  
 
 }
 .project-headings{
@@ -603,7 +523,7 @@ a{
 .project-subheading{
     width: 70%;
     font-style: italic;
-    font-size:16px ;
+    font-size:1rem;
 }
 .btn-grp{
     display: flex;
@@ -626,10 +546,156 @@ i:hover{
     transform: scale(1.2);
     transition: 0.5s;
 }
+
+@media (max-width: 700px) {
+
+    .projects{
+        background-color: rgb(231, 231, 231);
+       
+        padding-top: 4%;
+    
+        width: 100%;
+   
+        
+        
+    
+    }
+    .project-skill{
+        width: 1.3rem;
+    }
+    .project-content-left{
+        left: 0%;
+    
+    }
+    .project-content-right{
+        margin: 0 auto;
+    
+    }
+    .btn-project{
+        align-self: center;   
+    
+    }
+    .project-skills-container{
+        width: 100%;
+        display: flex;
+        gap: 0.5rem;
+        flex-wrap:wrap ;
+        height: 100%;
+    
+    }    
+    .btn-grp{
+        display: flex;
+    
+        gap: 1rem;
+        align-items: center;
+        width: 10%;
+        display: none;
+        
+        
+    }
+    
+    .project-content{
+        
+
+        display: flex;
+        position: absolute;
+        z-index: 3;
+        flex-direction: column;
+        color: white;
+        padding: 2rem;
+        gap: 0.2rem;
+        transition: all 0.4s;
+        
+      
+  
+        
+    }
+    .project-container{
+     
+       
+        
+       
+        width: 100%;
+        padding: 0rem;
+        height: 100%;
+     
+      
+    
+        
+    }
+    .project-subHeading{
+        width: 70%;
+        font-style: italic;
+        font-size:0.7rem;
+    }
+    .project-heading{
+       
+        font-size: 1rem;
+        
+        
+    
+    }
+    .project-card{
+ 
+    
+        height: 40vh;
+       
+        
+    }
+    #project1{
+     
+        margin: 0 auto;
+        width: 85%;
+    
+        
+    }
+    #project2{
+
+        
+        margin: 0 auto;
+        width: 85%;
+    
+        
+    }
+    #project3{
+
+        margin: 0 auto;
+        width: 85%;
+    
+        
+    }
+    #project4{
+    
+        margin: 0 auto;
+        width: 85%;
+        margin-bottom: 4rem;
+    
+        
+    }
+
+    .project-number{
+
+        font-size: 4rem;
+      
+       
+      
+    
+    }
+    .project-skills-container{
+       justify-content: center;
+    }
+
+}
+@media (max-width: 380px) {
+
+  
+
+}
+
 .skills-container{
     display: flex;
-    width: 1200px;
-    height: 70vh;
+    width: 90vw;
+   
     flex-direction: row;
     margin: 0 auto;
     margin-top: 10%;
@@ -638,11 +704,17 @@ i:hover{
 }
 
 .skill-left-container{
+    
    
 
     width: 50%;
 
     
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     
 }
 .skill-right-container{
@@ -650,10 +722,12 @@ i:hover{
     
     width: 50%;
     flex-wrap: wrap;
-    gap: 50px;
-  height: 60%;
+    gap: 2rem;
+  height: 100%;
   position: relative;
   z-index: 0;
+ 
+  justify-content: center;
     
     
 }
@@ -668,7 +742,7 @@ i:hover{
 
 }
 .skill-left-paragraph{
-    width: 60%;
+    width: 70%
 
 }
 #caps{
@@ -726,15 +800,20 @@ i:hover{
    
     
 }
+
+
 @keyframes bobbel {
    
-    50%{
-        top: 8rem;
+    
+    20%{
+        top: -1.5rem;
+        right: 2rem;
         
-    right: 7rem;
+  
    
     
     }
+  
 
 }
 
@@ -749,16 +828,89 @@ animation-name: skill-faded;
    animation-duration: 4s;
    animation-iteration-count: infinite;
    animation-timing-function: ease;
+   display: flex;
+
+   align-items: baseline;
     
 
 }
+.skill-box{
+    height: 20vh;
+    width: 100vw;
+    display: flex;align-items: baseline;
+    margin-bottom: 4%;
+}
+
 @keyframes skill-faded {
     50%{
-        margin-left: 30%;
+        margin-left: 20%;
         color: rgb(230, 230, 230);
         transition: 5s;
     }    
 }
+
+@media (max-width: 700px) {
+
+    .skills-container{
+        
+        flex-direction: column;
+     
+     
+        
+    
+    }
+
+    
+.skill-left-container{
+   
+
+    width: 100%;
+
+    
+
+    margin:  0 auto;
+    
+}
+.skill-right-container{
+    margin:  0 auto;
+    display: flex;
+    
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 2rem;
+  height: 100%;
+  position: relative;
+  z-index: 0;
+    
+    
+}
+.skill-left-paragraph{
+    width: 100%;
+    margin-bottom: 10%;
+
+}
+
+
+.skills-faded-text{
+    margin-left: 1%;
+
+    font-size: 5rem;
+  
+    
+
+
+}
+
+.skill-box{
+ margin-bottom: -13%;
+}
+
+
+
+
+
+}
+
 .paragraph{
     font-size: 1.2rem;
 }
@@ -769,7 +921,7 @@ animation-name: skill-faded;
     width: 100%;
     flex-direction: column;
     background-color: rgb(231, 231, 231);
-    margin-top: -3rem;
+   
 }
 
 .contact-heading{
@@ -862,4 +1014,98 @@ animation-name: skill-faded;
     transition: 0.2s;
 
 
+}
+
+
+@keyframes zigAnimations {
+    50%{
+        
+        right: 1em;
+        top: 2%;
+        transform: rotateY(-6deg);
+    }
+   
+    
+}
+
+@keyframes plusAnimations {
+    50%{
+        top:1%;
+        left:45%
+    }
+   
+    
+}
+@keyframes tex {
+    0%{
+        
+        font-size: 35px;
+        text-shadow: 5px 5px 7px  #0000003f;
+    }  
+    50%{
+        
+        font-size: 30px;
+        text-shadow: 5px 5px 7px  #0000003f;
+    }
+    100%{
+        
+        font-size: 35px;
+        text-shadow: 5px 5px 7px  #0000003f;
+    }
+   
+    
+}
+@keyframes scaleImage {
+    0%{
+        filter: grayscale(0);
+        transform: scale(1);
+        box-shadow: 3px 3px 10px black;
+    }
+    50%{
+        transform: scale(1.1);
+        filter: grayscale(0);
+        box-shadow: 3px 3px 10px black;
+    }
+    100%{
+        transform: scale(1);
+        filter: grayscale(1);
+        box-shadow: 3px 3px 5px black;
+    }
+
+    
+    
+}
+@keyframes dotsAnimations {
+    0%{
+        transform:translateY(0px);
+    }
+    50%{
+        transform: translateY(-15px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+    
+  }
+  @keyframes cubeRotate {
+    0%{
+        transform: rotateY(0deg) translateY(0px);
+    }
+    50%{
+        transform:  rotateY(180deg) translateY(-12px);
+    }
+    100%{
+        transform:  rotateY(360deg) translateY(0px);
+    }
+  }
+
+@keyframes circleShake {
+   
+    50%{
+        left: -13px;
+       top: 95%;
+    }
+   
+    
+    
 }
