--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ a{
 
     
 }
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     .hero {
       flex-direction: column; /* Child divs are placed in a column */
       gap: 3rem;
@@ -242,6 +242,16 @@ a{
    
         margin: 0
         auto;
+    }
+    .faded-text{
+        user-select: none;
+        font-size: 4rem;
+        color: rgb(231, 231, 231);
+       
+        font-weight: bold;
+        transition: all 3s;
+        text-align: center;
+        margin: 3%;
     }
 
    
@@ -728,6 +738,7 @@ i:hover{
   z-index: 0;
  
   justify-content: center;
+  
     
     
 }
@@ -742,6 +753,7 @@ i:hover{
 
 }
 .skill-left-paragraph{
+
     width: 70%
 
 }
@@ -771,16 +783,23 @@ i:hover{
 .skill-right-container:hover{
     transform: scale(1.05);
     transition: 1s;
+    
 
 
 }
+.skill-right-container:hover .blob-style{
+    transform: scale(1.1);
+    transition: 2s;
+ 
 
+
+}
 
 .blob-style{
     position: absolute;
     z-index: -1;
     top: 5rem;
-        transform: scale(0.9);
+        transform: scale(1);
     right: 4rem;
     
   
@@ -911,7 +930,7 @@ animation-name: skill-faded;
 
 .contact-form-container{
     display: flex;
-    height: 100vh;
+   
     width: 100%;
     flex-direction: column;
     background-color: rgb(231, 231, 231);
@@ -919,8 +938,11 @@ animation-name: skill-faded;
 }
 
 .contact-heading{
-    height: 35%;
+
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .badi-heading{
@@ -929,6 +951,30 @@ animation-name: skill-faded;
 .choti-heading{
     font-size: 2rem;
     color: #343d68aa;
+}
+
+.l-btn{
+    margin: 2rem;
+    
+    font-size: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+@media (max-width: 700px) {
+
+    .badi-heading{
+        font-size: 3rem;
+        text-align: center;
+    }
+    
+    .choti-heading{
+        text-align: center;
+        font-size: 1.5rem;
+   
+    }
+
 }
 .input-section{
     display: flex;
@@ -965,14 +1011,16 @@ animation-name: skill-faded;
     background-color: #343d68;
     display: flex;
     width: 100%;
-    height: 100%;
+    padding: 3%;
+    
     
 }
 .faded-bhavi{
     font-size: 4rem;
-    width: 15%;
-    margin-top: 16%;
-    margin-left: 6%;
+    
+    
+    background-color: #343d68;
+    text-align: center;
   
   
    color: #535c87;
@@ -981,22 +1029,40 @@ animation-name: skill-faded;
 .foot-right{
     display: flex;
     justify-content: space-between;
-    width: 85%;
-    padding: 10%;
+    width: 100%;
+    padding: 5%;
+   
+}
+@media (max-width: 700px) {
+    .link-wrapper{
+        
+        gap: 6rem;
+
+    
+       
+        flex-direction: column;
+        
+    }
+    .icon-wrapper{
+      flex-direction: column;
+     
+     
+    }
    
 }
 .link-wrapper{
     display: flex;
     gap: 3rem;
-    width: 50%;
+    margin-top: -1%;
+
    
     
 }
 .icon-wrapper{
     display: flex;
     gap: 2.5rem;
-    width: 50%;
-    padding-left: 30%;
+ 
+ 
 }
 .link-wrapper a{
     color: white;
